[package]
name = "upload-mbtiles"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "upload-mbtiles"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
url = "2.4"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
rand = "0.8"
bytes = "1.5"

